@@ -65,7 +65,7 @@ from userinterface.UserIF        import submitJobs,getJobStatus,queryPandaIDs,ki
      insertSandboxFileInfo,checkSandboxFile,changeJobPriorities,insertTaskParams,\
      killTask,finishTask,getCmtConfigList,getJediTasksInTimeRange,getJediTaskDetails,\
      retryTask,getRetryHistory,changeTaskPriority,reassignTask,changeTaskAttributePanda,\
-     pauseTask,resumeTask,increaseAttemptNrPanda
+     pauseTask,resumeTask,increaseAttemptNrPanda,killUnfinishedJobs
 allowedMethods += ['submitJobs','getJobStatus','queryPandaIDs','killJobs','reassignJobs',
                    'getJobStatistics','getJobStatisticsPerSite','resubmitJobs','queryLastFilesInDataset','getPandaIDsSite',
                    'getJobsToBeUpdated','updateProdDBUpdateTimes','runTaskAssignment','getAssigningTask','getSiteSpecs',
@@ -81,7 +81,7 @@ allowedMethods += ['submitJobs','getJobStatus','queryPandaIDs','killJobs','reass
                    'insertSandboxFileInfo','checkSandboxFile','changeJobPriorities','insertTaskParams',
                    'killTask','finishTask','getCmtConfigList','getJediTasksInTimeRange','getJediTaskDetails',
                    'retryTask','getRetryHistory','changeTaskPriority','reassignTask','changeTaskAttributePanda',
-                   'pauseTask','resumeTask','increaseAttemptNrPanda']
+                   'pauseTask','resumeTask','increaseAttemptNrPanda','killUnfinishedJobs']
 
 # import error
 import taskbuffer.ErrorCode
